<resources>
    <string name="app_name">Fake Call and SMS</string>
    <string name="app_name_share">Share Fake Call and SMS</string>
    <string name="app_name_desc">Share Fake Call and SMS with friends and give them \"An excuse at their fingertips\"</string>

    <string name="app_version">Current Version: %s</string>

    <string name="file_provider" templateMergeStrategy="preserve" translatable="false">me.carc.fakecallandsms_mvp.fileprovider</string>

    <string name="img_desc" translatable="false">Images</string>
    <string name="img_desc_mms" translatable="false">MMS attached image</string>

    <string name="select_ringtone">Ringtone</string>
    <string name="select_sms_ringtone">SMS Ringtone</string>
    <string name="sms_ringtone">SMS Ringtone (%s)</string>
    <string name="contacts">Contacts</string>
    <string name="mms_subject">MMS Subject</string>
    <string name="attachment">Attach</string>
    <string name="content_description">content description</string>
    <string name="type_your_message">Type your message</string>
    <string name="add_subject">Add MMS subject</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="unknown_caller">Unknown</string>
    <string name="unknown_caller2">Unknown Caller</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="sent">Send</string>
    <string name="inbox">Inbox</string>
    <string name="enter_number">Type number</string>
    <string name="draft">Draft</string>
    <string name="quick_time">Quick Time</string>
    <string name="vibrate">Vibrate</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="voice">Select Voice File</string>
    <string name="minutes_tv">Minutes</string>
    <string name="minutes">%1$s Minutes</string>
    <string name="change_dial_pad_launch_code">Change Dial Pad Launch Code</string>
    <string name="hide_the_launcher_icon">Hide the launcher icon</string>
    <string name="reset_default_sms_application">Reset default SMS application</string>
    <string name="application">Application</string>
    <string name="experimental">Experimental</string>
    <string name="quick_time_set_to">Quick Time set to:</string>
    <string name="call">Call</string>
    <string name="call_ending">Call Ending</string>

    <string name="action_settings">Settings</string>
    <string name="set">SET</string>
    <string name="call_logs">Call Logs</string>

    <!--empty state-->
    <string name="sms">Text Message</string>
    <string name="seconds">seconds</string>
    <string name="maximum_call_duration">Maximum Call Duration</string>


    <string name="settings_title_share">Share</string>
    <string name="settings_summary_share">Share the app with friends.</string>

    <string name="settings_title_rate">Rate</string>
    <string name="settings_title_about">About</string>
    <string name="settings_title_change_log">View change log</string>
    <string name="settings_summary_rate">Leave a rating or some feedback.</string>
    <string name="feedback_request_title">Send Feedback</string>
    <string name="feedback_request_hint">Most Fake Call features are suggestions, let me know how to improve it more</string>
    <string name="ratings_request_title">Ratings really matter… would you leave some stars?</string>

    <string name="feature_request_title">Unsupported Feature</string>
    <string name="feature_request">\'%s\':: feature not available on this device. Please send the following information and I\'ll see if I can fix this :)</string>

    <string name="sms_scheduled">Fake SMS Scheduled</string>
    <string name="reset_sms_application_on_exit">Reset SMS application on exit</string>



    <!--RATING and FEEDBACK DIALOG-->
    <string name="feedback_request_send">Send</string>
    <string name="feedback_request_cancel">Cancel</string>
    <string name="feedbackChooserTitle">Send Feedback Via</string>
    <string name="lib_thanks">Butter Knife\n  - Android views Binding Library
        \n\n
        GlowPadBackport\n  - Incoming call library
        \n\n
        RatingDialog (modified)\n  - Rating library from codemybrainsout
        \n\n
        ckChangeLog\n  - Android Library to display a Change Log
    </string>


    <string name="carc_app_base_url" formatted="false">https://play.google.com/store/apps/details?id=me.carc.%s</string>

    <string name="appTitleITimer">Interval Timer | Simple, Easy, Intuitive</string>
    <string name="appDescITimer">Interval Timer suitable for: Running, Boxing, Calisthenics, Circuit Training, HIIT, Tabata and more!</string>

    <string name="appTitleBtown">B-Town | Berlin Tours and Maps</string>
    <string name="appDescBtown">The ultimate Berlin guide.\nExplore Berlin better with B-Town!</string>

    <string name="appTitleAGD">Any Given Date | Event Counter</string>
    <string name="appDescAGB">Never miss another birthday, valentines, dinner date or meeting. Keep track of how long until your next holiday, birthday or anniversary.</string>

    <string name="appTitleBlackBooks">BlackBooks Stories</string>
    <string name="appDescBlackBooks">Brain puzzles to play with friends.\nFind the situation behind the short story with just yes and no answers</string>

    <string name="error_wrong_screen">You can\'t start a phone call or SMS from this screen!!</string>
    <string name="added_db_entry">Added to Database</string>
    <string name="close_when_call_set">Close when call or SMS set</string>
    <string name="fake_call_started">Fake Call Started</string>

    <string name="no_media">Error: can not access your Gallery.</string>


    <!--CHANGELOG STATIC STRINGS-->
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">More…</string>
    <string name="coming_soon_content">Favorite list and Category menu</string>


    <string name="single_grid_text">Single</string>
    <string name="grid_grid_text">Grid</string>

    <string name="menu_shuffle">Shuffle</string>
    <string name="menu_add">Add</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_via">Share via…</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_slide_show">Slide show</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="previous_screen">Previous screen</string>
    <string name="error_sms_params">Please check you have entered a message and selected a contact</string>
    <string name="added_call_history">Added to call history</string>
    <string name="shared_string_unknown">Unknown</string>
    <string name="system_default">System Default</string>
    <string name="favourite">Favourite</string>
    <string name="artist_title_divider">%s | %s</string>
    <string name="cloud_photos_toolbar_title">Unsplash It</string>

    <string name="no_link_for_app">You don\'t have any app that can open this link</string>

</resources>
