<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="1">

            <EditText
                    android:id="@+id/smsMsg"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_margin="@dimen/margin_standard"
                    android:padding="@dimen/margin_small"
                    android:hint="@string/type_your_message"
                    android:textColorHint="@color/controlDisabled"
                    android:textSize="20sp"
                    android:inputType="textMultiLine|textCapSentences"
                    android:gravity="top|start"
                    android:background="@drawable/custom_border"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_standard"
                    android:layout_marginEnd="@dimen/margin_standard"
                    android:background="@drawable/custom_border"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/contactNameTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small"
                            android:textSize="20sp"
                            android:textColor="@color/almostWhite"
                            tools:text="@string/contacts"/>

                    <EditText
                            android:id="@+id/smsNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small"
                            android:gravity="center_vertical"
                            android:textSize="25sp"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:maxEms="20"
                            android:textColorHint="@color/controlDisabled"
                            android:hint="@string/enter_number"/>

                </LinearLayout>

                <Button
                        android:id="@+id/contactBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableTop="@drawable/ic_person"
                        android:drawablePadding="@dimen/margin_standard"
                        android:textSize="20sp"
                        android:textColor="@color/controlDisabled"
                        android:text="@string/contacts"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>


            <include layout="@layout/date_time_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_standard"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:layout_marginStart="@dimen/margin_standard"
                    android:layout_marginEnd="@dimen/margin_standard"
                    android:background="@drawable/custom_border"
                    android:orientation="horizontal">

                <ToggleButton
                        android:id="@+id/toggleInbox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_inbox"
                        android:textOn="@string/inbox"
                        tools:checked="true"
                        android:textSize="16sp"
                        android:textColor="@color/controlDisabled"
                        style="@style/Widget.AppCompat.Button.Borderless"/>

                <ToggleButton
                        android:id="@+id/toggleSent"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_send"
                        android:textOn="@string/sent"
                        tools:checked="true"
                        android:textSize="16sp"
                        android:textColor="@color/controlDisabled"
                        style="@style/Widget.AppCompat.Button.Borderless"/>


                <ToggleButton
                        android:id="@+id/toggleDraft"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_draft"
                        android:textSize="16sp"
                        android:textOn="@string/draft"
                        tools:checked="true"
                        android:textColor="@color/controlDisabled"
                        style="@style/Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

        </GridLayout>

        <TextView
                android:id="@+id/smsCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_counter"
                android:layout_marginEnd="@dimen/margin_counter"
                android:textColor="@color/almostWhite"
                tools:text="1/26"/>

    </RelativeLayout>
</ScrollView>