<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="1"
                android:background="@color/fragment_background">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_standard">

                <Button
                        android:id="@+id/contactBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/content_description"
                        android:drawableTop="@drawable/ic_person"
                        android:text="@string/contacts"
                        android:textSize="20sp"
                        android:textColor="@color/controlDisabled"
                        android:layout_marginStart="@dimen/margin_standard"
                        android:layout_marginEnd="@dimen/margin_standard"
                        android:background="@drawable/custom_border"
                        android:padding="@dimen/margin_standard"
                        style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                        android:id="@+id/ringtoneBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/select_ringtone"
                        android:textSize="20sp"
                        android:textColor="@color/controlDisabled"
                        android:drawableTop="@drawable/ic_music_lib"
                        android:layout_marginEnd="@dimen/margin_standard"
                        android:background="@drawable/custom_border"
                        android:padding="@dimen/margin_standard"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        />

            </LinearLayout>

            <include
                    layout="@layout/date_time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_standard"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:layout_marginStart="@dimen/margin_standard"
                    android:layout_marginEnd="@dimen/margin_standard"
                    android:background="@drawable/custom_border"
                    android:orientation="horizontal">

                <RadioGroup
                        android:id="@+id/callTypeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_small"
                        android:gravity="center">

                    <RadioButton
                            android:id="@+id/incomingRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_call_in"
                            android:text="Incoming"
                            android:textColor="@color/controlDisabled"
                            android:textSize="16sp"
                            android:checked="true"/>

                    <RadioButton

                            android:id="@+id/outgoingRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_call_out"
                            android:text="Outgoing"
                            android:textColor="@color/controlDisabled"
                            android:textSize="16sp"/>

                    <RadioButton
                            android:id="@+id/missedRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_call_missed"
                            android:text="Missed"
                            android:textColor="@color/controlDisabled"
                            android:textSize="16sp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:layout_marginStart="@dimen/margin_standard"
                    android:layout_marginEnd="@dimen/margin_standard"
                    android:background="@drawable/custom_border"
                    android:orientation="horizontal">

                <ToggleButton
                        android:id="@+id/quickTimeBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_add"
                        android:textOff="@string/quick_time"
                        android:textSize="16sp"
                        android:textColor="@color/controlDisabled"
                        style="@style/Widget.AppCompat.Button.Borderless"/>


                <ToggleButton
                        android:id="@+id/toggleVibrate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_vibrate"
                        android:textSize="16sp"
                        android:textOff="@string/vibrate"
                        android:textColor="@color/controlDisabled"
                        style="@style/Widget.AppCompat.Button.Borderless"/>

                <ToggleButton
                        android:id="@+id/toggleLogs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_time"
                        android:textOff="@string/call_logs"
                        android:checked="true"
                        android:textSize="16sp"
                        android:textColor="@color/controlDisabled"
                        style="@style/Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

        </GridLayout>

    </RelativeLayout>

</ScrollView>
